# agnolog

./: .env.example  .gitignore  CLAUDE.md  Claude.md  Makefile  README.md  agnolog.spec  pyproject.toml
.github/workflows/: release.yml
agnolog/: __init__.py  __main__.py  cli.py
agnolog/core/: __init__.py  config.py  constants.py  errors.py  factory.py  lua_adapter.py  lua_runtime.py  registry.py  resource_loader.py  types.py
agnolog/data/: __init__.py
agnolog/formatters/: __init__.py  base.py  csv_formatter.py  json_formatter.py  text_formatter.py
agnolog/generators/: __init__.py  base.py
agnolog/logutils/: __init__.py  internal_logger.py
agnolog/output/: __init__.py  base.py  file_handler.py  stream_handler.py
agnolog/resources/data/classes/: classes.yaml  races.yaml
agnolog/resources/data/constants/: combat.yaml  server.yaml
agnolog/resources/data/items/: item_names.yaml  weapon_types.yaml
agnolog/resources/data/monsters/: dungeon_bosses.yaml
agnolog/resources/data/world/: dungeons.yaml  leveling_zones.yaml
agnolog/resources/generators/combat/: arena_start.lua  battleground_join.lua  damage_dealt.lua  damage_taken.lua  debuff_apply.lua  dungeon_enter.lua  mob_aggro.lua  pvp_death.lua
agnolog/resources/generators/economy/: auction_list.lua  gold_spend.lua  trade_request.lua
agnolog/resources/generators/player/: character_create.lua  chat_trade.lua  inventory_full.lua
agnolog/resources/generators/security/: audit_log.lua  command.lua  kick.lua
agnolog/resources/generators/server/: config_reload.lua  world_save.lua
agnolog/resources/generators/technical/: cache_miss.lua  error.lua  exception.lua  queue_depth.lua  rate_limit.lua
agnolog/scheduling/: __init__.py  patterns.py  scheduler.py
docs/: CHANGELOG.md  adding-resources.md
docs/templates/: build-info.txt  get-started-linux.md  get-started-macos.md  get-started-windows.md  release-notes.md
mmofakelog/: __init__.py  __main__.py  cli.py
mmofakelog/ai/: __init__.py  cache.py  client.py  prompts.py
mmofakelog/core/: __init__.py  config.py  constants.py  errors.py  factory.py  lua_adapter.py  lua_runtime.py  registry.py  resource_loader.py  types.py
mmofakelog/data/: __init__.py  items.py  monsters.py  names.py  quests.py  skills.py  zones.py
mmofakelog/formatters/: __init__.py  base.py  json_formatter.py  text_formatter.py
mmofakelog/generators/: __init__.py  base.py  combat.py  economy.py  player.py  security.py  server.py  technical.py
mmofakelog/logging/: __init__.py
mmofakelog/logutils/: __init__.py  internal_logger.py
mmofakelog/output/: __init__.py  base.py  file_handler.py  stream_handler.py
mmofakelog/resources/data/constants/: economy.yaml  error_codes.yaml  network.yaml
mmofakelog/resources/data/items/: consumables.yaml  item_prefixes.yaml  item_suffixes.yaml  rarities.yaml
mmofakelog/resources/data/monsters/: monster_types.yaml  world_bosses.yaml
mmofakelog/resources/data/names/: chat_messages.yaml  name_roots.yaml  npc_names.yaml  player_prefixes.yaml  player_suffixes.yaml
mmofakelog/resources/data/quests/: quest_types.yaml  story_quests.yaml
mmofakelog/resources/data/world/: cities.yaml  raids.yaml  starting_zones.yaml
mmofakelog/resources/generators/combat/: arena_end.lua  battleground_end.lua  boss_engage.lua  buff_apply.lua  dungeon_wipe.lua  heal.lua  mob_kill.lua  pvp_kill.lua  raid_complete.lua  raid_enter.lua
mmofakelog/scheduling/: __init__.py  patterns.py  scheduler.py
resources/crypto-trading/data/: constants.yaml  cryptocurrencies.yaml  exchanges.yaml  strategies.yaml
scripts/: .config.json  release.sh
scripts/common/: load-config.sh
tests/: __init__.py  conftest.py  test_cli.py  test_constants.py  test_errors.py  test_factory.py  test_output.py  test_registry.py  test_scheduling.py  test_types.py
tests/test_formatters/: test_csv_formatter.py  test_json_formatter.py  test_text_formatter.py
tests/test_generators/: __init__.py  test_all_generators.py  test_base.py
(+742 files in other folders)
